--- a/composer.json
+++ b/composer.json
@@ -7,12 +7,19 @@
             "name": "Mindaugas Liubinas",
             "email": "mindaugas.l@estina.lt",
             "homepage": "http://www.estina.com/"
+        },
+        {
+            "name": "Abdul Qureshi",
+            "email": "abdul@easyfundraising.org.uk"
         }
     ],
     "minimum-stability": "dev",
     "require": {
         "php": ">=5.3.0",
         "ext-curl": "*"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "~4.7"
     },
     "autoload": {
         "psr-0" : {
