--- a/composer.json
+++ b/composer.json
@@ -21,5 +21,8 @@
         "psr-0" : {
             "Estina\\SmartFocus" : "src"
         }
+    },
+    "scripts": {
+        "test": "./vendor/bin/phpunit"
     }
 }
