--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -2,7 +2,7 @@
 
 <phpunit backupGlobals="false"
          backupStaticAttributes="false"
-         bootstrap="../vendor/autoload.php"
+         bootstrap="./vendor/autoload.php"
          colors="true"
          convertErrorsToExceptions="true"
          convertNoticesToExceptions="true"
@@ -14,7 +14,7 @@
 
     <testsuites>
         <testsuite name="Estina SmartFocus Test Suit">
-            <directory>../tests/</directory>
+            <directory>./tests/</directory>
         </testsuite>
     </testsuites>
 
